// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/docker build retries 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build throws 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache (dry-run) 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--build-arg=IMAGE=slim",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--cache-from=renovate/docker-build-cache:base-latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build works 1`] = `
[
  [
    "docker",
    [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      ".",
    ],
  ],
]
`;
